@@ -1,6 +1,8 @@
 - added raiser()
 - added idistinct()
 - added key argument to i?distinct()
+Backward incompatible changes:
+- group_by() and count_by() no longer return defaultdicts
 
 0.7
 - added i?flatten()
